--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description"
+      content="NMC Portal - Solving all issues related to environment, fire, accidents, and traveling. Users can post their issues and contact the government in emergencies." />
+    <meta name="keywords" content="NMC Portal, Environment, Fire, Accidents, Traveling, Government, Emergency" />
+    <meta name="author" content="Your Name" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>NMC Portal</title>
+    <link href="/dist/output.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="bg-gray-100">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
