--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       content="NMC Portal - Solving all issues related to environment, fire, accidents, and traveling. Users can post their issues and contact the government in emergencies." />
     <meta name="keywords" content="NMC Portal, Environment, Fire, Accidents, Traveling, Government, Emergency" />
     <meta name="author" content="Your Name" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <title>NMC Portal</title>
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
+    <title>Citizens Resolve</title>
     <link href="/dist/output.css" rel="stylesheet">
   </head>
   <body class="bg-gray-100">
